--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: '3.8'
 services:
-  goapp:
-    build: .
-    container_name: goapp_container
-    restart: unless-stopped
-    image: goapp_image
-    ports:
-      - "0.0.0.0:3000:3000"
-    depends_on:
-      - factory_db
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+  # goapp:
+  #   build: .
+  #   container_name: goapp_container
+  #   restart: unless-stopped
+  #   image: goapp_image
+  #   ports:
+  #     - "0.0.0.0:3000:3000"
+  #   depends_on:
+  #     - factory_db
+  #   extra_hosts:
+  #     - "host.docker.internal:host-gateway"
   factory_db:
     image: mysql
     restart: unless-stopped
