Add customer routes

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_CONNECTION_STRING=root:root@tcp(localhost:3306)/factory_db?parseTime=true&multiStatements=true
+DB_CONNECTION_STRING=root:@tcp(localhost:3306)/factory_db?parseTime=true&multiStatements=true
