--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,20 +5,22 @@ services:
   #   container_name: goapp_container
   #   restart: unless-stopped
   #   image: goapp_image
+  #   env_file:
+  #     - ./production.env
   #   ports:
-  #     - "0.0.0.0:3000:3000"
+  #     - "0.0.0.0:8569:8569"
   #   depends_on:
-  #     - factory_db
+  #     - wingman_db
   #   extra_hosts:
   #     - "host.docker.internal:host-gateway"
   factory_db:
     image: mysql
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: root
+      MYSQL_ROOT_PASSWORD: e1e0c085
+      MYSQL_DATABASE: factory_db
     volumes:
-      - mysql_db_volume99:/var/lib/mysql
+      - mysql_db_volume31:/var/lib/mysql
     ports:
       - "3306:3306"
   phpmyadmin:
@@ -31,25 +33,25 @@ services:
       environment:
         PMA_HOST: factory_db
         MYSQL_ROOT_PASSWORD: e1e0c085
-  dozzle:
-    image: amir20/dozzle:latest
-    environment:
-      DOZZLE_LEVEL: debug
-      DOZZLE_USERNAME_FILE: /run/secrets/dozzle_user
-      DOZZLE_PASSWORD_FILE: /run/secrets/dozzle_password
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-    secrets:
-      - dozzle_user
-      - dozzle_password
-    ports:
-      - 5543:8080
+  # dozzle:
+  #   image: amir20/dozzle:latest
+  #   environment:
+  #     DOZZLE_LEVEL: debug
+  #     DOZZLE_USERNAME_FILE: /run/secrets/dozzle_user
+  #     DOZZLE_PASSWORD_FILE: /run/secrets/dozzle_password
+  #   volumes:
+  #     - /var/run/docker.sock:/var/run/docker.sock
+  #   secrets:
+  #     - dozzle_user
+  #     - dozzle_password
+  #   ports:
+  #     - 5543:8080
 
 volumes:
-  mysql_db_volume99:
+  mysql_db_volume31:
 
-secrets:
-  dozzle_user:
-    file: dozzle_user.txt
-  dozzle_password:
-    file: dozzle_password.txt
+# secrets:
+#   dozzle_user:
+#     file: dozzle_user.txt
+#   dozzle_password:
+#     file: dozzle_password.txt
